--- a/composer.json
+++ b/composer.json
@@ -2,33 +2,28 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "keywords": ["framework","laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^0.9.0",
-        "doctrine/dbal": "^3.0",
-        "fideloper/proxy": "^4.4",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/jetstream": "^2.2",
-        "laravel/sanctum": "^2.6",
-        "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.0",
-        "milon/barcode": "^8.0",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "php": "^8.1",
+        "doctrine/dbal": "^3.4",
+        "guzzlehttp/guzzle": "^7.7",
+        "laravel/framework": "^10.0",
+        "laravel/jetstream": "^3.0",
+        "laravel/sanctum": "^3.3",
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.0",
+        "milon/barcode": "^12.0",
+        "barryvdh/laravel-dompdf": "^2.2",
+        "yajra/laravel-datatables-oracle": "^10.0",
+        "spatie/laravel-ignition": "^2.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "fakerphp/faker": "^1.23",
+        "laravel/sail": "^1.19",
+        "mockery/mockery": "^1.5",
+        "nunomaduro/collision": "^6.4",
+        "phpunit/phpunit": "^10.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -55,8 +50,6 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
